--- a/Data.Rmd
+++ b/Data.Rmd
@@ -447,7 +447,7 @@ write_xlsx(EU_CP, "EU_CP.xlsx")
 ```
 
 ```{r}
-now?
+##now?
 ```
 
 Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
