--- a/Data.Rmd
+++ b/Data.Rmd
@@ -448,6 +448,7 @@ write_xlsx(EU_CP, "EU_CP.xlsx")
 
 ```{r}
 ##now?
+##got it?
 ```
 
 Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
